--- a/pom.xml
+++ b/pom.xml
@@ -43,11 +43,6 @@
             <version>1.1.10</version>
         </dependency>
         <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
-            <scope>runtime</scope>
-        </dependency>
-        <dependency>
             <groupId>net.oschina.zcx7878</groupId>
             <artifactId>fastdfs-client-java</artifactId>
             <version>1.27.0.0</version>
@@ -71,7 +66,7 @@
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
-            <version>5.1.44</version>
+            <version>8.0.15</version>
         </dependency>
         <dependency>
             <groupId>com.github.binarywang</groupId>
@@ -89,7 +84,11 @@
             <version>3.10.2</version>
         </dependency>
         <!--    集成NLP库    -->
-
+        <dependency>
+            <groupId>com.unfbx</groupId>
+            <artifactId>chatgpt-java</artifactId>
+            <version>1.0.14-beta1</version>
+        </dependency>
 
         <dependency>
             <groupId>edu.stanford.nlp</groupId>
