--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,7 +1,7 @@
 #数据库配置
-spring.datasource.url=jdbc:mysql://localhost/chatroom?characterEncoding=utf-8&useSSL=false&serverTimezone=Asia/Shanghai
+spring.datasource.url=jdbc:mysql://localhost:3306/chatroom?characterEncoding=utf-8&useSSL=false&serverTimezone=Asia/Shanghai
 # spring.datasource.url=ciward.site:3306
-spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
+# spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.username=chatuser
 #开发环境密码
 spring.datasource.password=A888666aB...
@@ -10,7 +10,7 @@ mybatis.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
 #mapper文件位置配置
 mybatis.mapper-locations=classpath:mapper/*.xml
 #端口号配置
-server.port=8085
+server.port=8082
 #FastDFS文件服务器的主机名
 fastdfs.nginx.host=
 #SMTP服务器地址
