--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,5 +1,5 @@
 #数据库配置
-spring.datasource.url=jdbc:mysql://localhost:3306/chatroom?characterEncoding=utf-8&useSSL=false&serverTimezone=Asia/Shanghai
+spring.datasource.url=jdbc:mysql://10.102.33.6:3306/chatroom?characterEncoding=utf-8&useSSL=false&serverTimezone=Asia/Shanghai
 # spring.datasource.url=ciward.site:3306
 # spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.username=chatuser
